# Sudoku-Generator

./: .gitignore  README.md  pyproject.toml
Sudoku-Generator/: generator.py  latex_builder.py
assets/: first_pages.txt  last_pages.txt  solution_block.txt  solutionless_sudoku.txt  sudoku_and_solution_left.txt  sudoku_and_solution_right.txt
scripts/: build_exe.py
sudoku_generator/: definitions.py  log.py  main.py  sudoku.py
