[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sudoku_generator"
version = "0.0.1"
authors = [
  { name="Arjan Lemmens", email="arjanmail@tutamail.com" },
]
description = "Script which generates a PDF holding multiple new sudoku's"
readme = "README.md"
requires-python = ">= 3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
]